--- a/-Unknown-Prototype/Assembly-CSharp.csproj
+++ b/-Unknown-Prototype/Assembly-CSharp.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Assets\Scripts\GoingLeft.cs" />
     <Compile Include="Assets\Scripts\HealthBar.cs" />
     <Compile Include="Assets\Scripts\MenuScripts\MainMenu.cs" />
+    <Compile Include="Assets\Scripts\MenuScripts\PauseMenu.cs" />
     <Compile Include="Assets\Scripts\Movement.cs" />
     <Compile Include="Assets\Scripts\Multi.cs" />
     <Compile Include="Assets\Scripts\ReceivingScoreAndHealthLoss.cs" />
